--- a/css/estilo.css
+++ b/css/estilo.css
@@ -52,6 +52,7 @@
 .marginF {
     margin: 0px 0px 110px 0px;
 }
+
 .sucursales {
     text-align: center;
     margin-top: 15px;
@@ -70,4 +71,6 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
+
