--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,40 +1,33 @@
-.color-font {
-    color: rgb(0, 0, 0);
-    font-size: 15px;
-    font-weight: bolder;
+/* ESTILOS INDEX */
+.bgIndex {
+    background-color: rgb(74, 70, 64);
+    color: white;
+}
+
+.pages {
+    font-size: 20px;
+    margin: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .woman {
     margin: 0px 0px 80px 0px;
 }
 
-.tituloP {
-    background-color: rgba(240, 230, 140, 0.588);
-    color: black;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 5px;
-    font-weight: bolder;
-}
-
-
-.bgContactos {
-    background-color: khaki;
-}
-
-.inicio {
-    color: black;
-    background-color: rgba(245, 245, 244, 0.63);
-    padding: 30px;
-}
-
-.bgIndex {
-    background-color: rgb(74, 70, 64);
-    color: white;
+/* ESTILO PRODUCTOS */
+.marginF {
+    margin: 0px 0px 110px 0px;
 }
 
 .card {
     margin-top: 50px;
+}
+
+.contenedor-cads {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .color-btn {
@@ -45,19 +38,55 @@
     text-decoration: none;
 }
 
-.woman {
-    margin: 0px 0px 80px 0px;
+/* ESTILO SERVICIOS */
+.serv{
+    padding-top: 1rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
-.marginF {
-    margin: 0px 0px 110px 0px;
+.transf{
+    width: 550px;
+    height: 400px;
 }
-
+.transf:hover{
+    width: 540px;
+    height: 410px;
+}
+/* ESTILO SUCURSALES */
 .sucursales {
     text-align: center;
     margin-top: 15px;
 }
+.contenedor{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+iframe{
+    /* margin-left: 15px;
+    margin-bottom: 90px;
+    margin-top: 15px; */
 
+    margin: 20px 10px 90px 0px;
+}
+/* ESTILO CONTACTOS */
+.bgContactos {
+    background-color: khaki;
+}
+.link{
+    text-decoration: none;
+}
+
+/* ESTILOS UNIVERSALES */
+/* título divisorio */
+.tituloP {
+    background-color: rgba(240, 230, 140, 0.588);
+    color: black;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 5px;
+    font-weight: bolder;
+}
+/* pié de página */
 footer {
     text-align: center;
     color: #ffffff;
@@ -66,11 +95,4 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-}
-
-.contenedor-cads {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
 }
