--- a/css/estilo.css
+++ b/css/estilo.css
@@ -58,15 +58,14 @@
 }
 .contenedor{
     display: flex;
+    padding-bottom: 90px;
     justify-content: center;
     align-items: center;
 }
 iframe{
-    /* margin-left: 15px;
-    margin-bottom: 90px;
-    margin-top: 15px; */
-
-    margin: 20px 10px 90px 0px;
+    width: 560px;
+    height: 260px;
+    margin: 0px 10px 0px 10px;
 }
 /* ESTILO CONTACTOS */
 .bgContactos {
