--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,38 +39,45 @@
 }
 
 /* ESTILO SERVICIOS */
-.serv{
+.serv {
     padding-top: 1rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.transf{
+
+.transf {
     width: 550px;
     height: 400px;
 }
-.transf:hover{
+
+.transf:hover {
     width: 540px;
     height: 410px;
 }
+
 /* ESTILO SUCURSALES */
 .sucursales {
     text-align: center;
     margin-top: 15px;
 }
-.contenedor{
+
+.contenedorIframe {
     flex-direction: column;
-    padding-bottom: 90px;
+    margin-bottom: 90px;
 }
-iframe{
-    width: 500px;
+
+.contenedorIframe iframe {
     height: 300px;
-    border-bottom: 15px;
-    margin: 0px 10px 0px 10px;
+    padding-left: 10px;
+    justify-content: center;
+    align-items: center;
 }
+
 /* ESTILO CONTACTOS */
 .bgContactos {
     background-color: khaki;
 }
-.link{
+
+.link {
     text-decoration: none;
 }
 
@@ -84,6 +91,7 @@ iframe{
     padding: 5px;
     font-weight: bolder;
 }
+
 /* pié de página */
 footer {
     text-align: center;
